# ble_sensor_logger

./: .gitignore  AGENTS.md  LICENSE  README.md
docs/: README.md  development_process.md  (+1 more)
docs/adr/: README.md  (+6 more)
firmware/: .env.template  CMakeLists.txt  Kconfig  README.md  iks01a2_i2c_probe_debug.conf  prj.conf  rtt_debug.conf
firmware/boards/: nrf52840dk_nrf52840.overlay
firmware/docs/: ai_quickstart.md
firmware/docs/runbooks/: build.md  common_prerequisites.md  flash.md  rtt_debug.md  troubleshooting.md
firmware/scripts/: rtt_capture.sh
firmware/src/: main.c
firmware/src/events/: ble_events.c  ble_events.h  config_events.c  config_events.h  sensor_events.c  sensor_events.h  status_events.c  status_events.h
firmware/src/modules/: adc_sensor.c  adc_sensor.h  ble_service.c  ble_service.h  control.c  control.h  hts221_sensor.c  hts221_sensor.h  iks01a2_i2c_probe.c  iks01a2_i2c_probe.h  lps22hb_sensor.c  lps22hb_sensor.h  lsm303agr_magn_sensor.c  lsm303agr_magn_sensor.h  lsm6dsl_sensor.c  lsm6dsl_sensor.h  sensor_dummy.c  sensor_dummy.h
firmware/src/platform/: platform_time.c  platform_time.h
firmware/src/protocol/: protocol.c  protocol.h
pc_app/: pyproject.toml
pc_app/scripts/: ble_e2e_smoke.py  ble_negative_smoke.py  run_pc_app.bat  run_pc_app.sh  stop_pc_app.bat  stop_pc_app.sh
pc_app/src/ble_sensor_logger/: __init__.py  __main__.py  app_core.py  ble_client.py  constants.py  protocol.py  ui_shell.py  web_api.py
pc_app/tests/: test_app_core.py  test_protocol.py  test_web_api.py
pc_app/web_frontend/: app.js  index.html  styles.css
(+14 files in other folders)
